--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
-Summary
+== Summary
 
 On the homepage, there are buttons for New Venue and New Concert. When either button is clicked, an AJAX form pops up with options to Cancel or Save. Venues have a name. Concerts have an artist name, a date/time, and a dropdown menu to select a venue. When the form is submitted, the homepage is updated with a venue list ordered by name with the concerts playing at each venue - ordered by date/time.
